--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 version: '3'
 services:
-  shadowsocks-server:
-    image: agate/shadowsocks-server:201706
+  shadowsocks:
+    image: agate/shadowsocks:201709
     build: .
+  shadowsocks-server:
+    image: agate/shadowsocks:201709
     network_mode: host
+    command: server
     environment:
       - SS_PORT=30001
+      - SS_PASSWORD=abcd
+  shadowsocks-local:
+    image: agate/shadowsocks:201709
+    network_mode: host
+    command: local
+    environment:
+      - SS_SERVER_ADDR=localhost
+      - SS_SERVER_PORT=30001
       - SS_PASSWORD=abcd
